src/ariel-os-macros/tests/ui/task/missing_autostart_param_for_hook.stderr
error: custom attribute panicked
 --> tests/ui/task/missing_autostart_param_for_hook.rs:5:1
  |
5 | #[ariel_os::task(usb_builder_hook)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the task must be `autostart` to instantiate hooks
